--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:title"
-      content="hbit | harvard bio investment team"
+      content="hbit | harvard undergrad bio investment team"
     />
     <meta
       property="og:description"
@@ -34,7 +34,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
     <title>
-      HBIT | Harvard Bio Investment Team
+      HBIT | Harvard Undergrad Bio Investment Team
     </title>
   </head>
   <body>
